First draft of MCP server configuration